@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.15.7
+VERSION=1.15.8
 DEPENDENCY="zeda=1.9.0;zm=1.8.16"
